fixed some typos

--- a/Python_Basics.ipynb
+++ b/Python_Basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f65c4646",
+   "id": "9ac38ec5",
    "metadata": {},
    "source": [
     "# Hello World\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1da9292",
+   "id": "e772074d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d7af307",
+   "id": "1adc92a0",
    "metadata": {},
    "source": [
     "Unter der Zelle sollte der Spruch \"Hello World\" erschienen sein. Mit dem `print()`Befehl, kann man sich nämlich ausgeben lassen, was in den runden Klammern steht. Texte müssen in Programmiersprachen mit Anführungszeichen gekennzeichnet sein und werden auch Strings (engl. für Zeichenkette) genannt. Probiere mal in der nächsten Zelle deinen Namen mit `print()` ausgeben zu lassen. "
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db41afad",
+   "id": "3aa79545",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,18 +44,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61f3dd21",
+   "id": "cfe14821",
    "metadata": {},
    "source": [
     "# Variablen\n",
     "\n",
-    "Variablen kennst du Wahrscheinlich aus dem Matheunterricht. Da heißen die meist x und y. Beim Programmieren werden Variablen als eine Art Platzhalter verwendent. So kann man einer Variable (die man fast beliebig nennen kann - aber eben nur fast). Einen Wert zuweisen. So wie hier:"
+    "Variablen kennst du Wahrscheinlich aus dem Matheunterricht. Da heißen die meist x und y. Auch beim Programmieren werden Variablen als eine Art Platzhalter verwendent. So kann man einer Variable (die man fast beliebig nennen kann - aber eben nur fast). Einen Wert zuweisen. So wie hier:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01bb7cc5",
+   "id": "5fe1e4be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c9a8b08",
+   "id": "4f8c57e0",
    "metadata": {},
    "source": [
     "Es passiert genau das gleiche wie in der ersten Zelle, aber diesmal haben wir \"Hello World\" der Variable `a` zugewiesen. Wir können jetzt solange `a` als Stellvertreter für \"Hello World\" verwenden, bis wir es mit einem neuen Wert überschreiben. Das geht in Notebooks sogar über verschiedene Zellen hinweg."
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad70e4e7",
+   "id": "6025d304",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17f8ef48",
+   "id": "3bae06f8",
    "metadata": {},
    "source": [
     "Variablen(werte) haben unterschiedliche Datentypen. Einen kennst du schon - nämlich String. Das ist quasi der Datentyp für Text. Andere Datentypen sind zum Beispiel Interger (ganze Zahlen), Float (Gleitkommazahlen) oder Boolsche Werte (True oder False, Wahr oder Falsch). In Python muss man bei der Erstellung (oder Zuweisung) einer Variablen aber nicht angben, was diese für einen Typ hat. Python erkennt das automatisch. Hier ein paar Beispiele: "
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1466ca9",
+   "id": "7d4241db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ab7b73b",
+   "id": "8b845189",
    "metadata": {},
    "source": [
     "Gerade Integer und Floats sind recht ähnlich zur Mathematik. In Python kann man mit diesen sogar rechnen, wie mit einem Taschenrechner:"
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95e56351",
+   "id": "096e3ba1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "340313f1",
+   "id": "c3103df4",
    "metadata": {},
    "source": [
     "Versuche selbst mal ein paar einfach Gleichungen ausrechnen und Dir das Ergebnis anzeigen zu lassen. Du kannst `+`, `-`, `*` und `/`. Auch Klammern `()`funktionieren."
@@ -137,14 +137,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25a578df",
+   "id": "0b2e2ea2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "0eef5840",
+   "id": "99f2090a",
    "metadata": {},
    "source": [
     "Man kann sogar Dinge machen, die in der Mathematik nicht gehen. Während `a = a + 1` dort eine falsche Aussage wäre, wird in der Informatik der alte Wert von a genommen und um eins erhöht. Das funktioniert natürlich nur wenn a ein Interger oder Float ist. "
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e804cd4",
+   "id": "d6b4edfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b08fbf1d",
+   "id": "50b049d5",
    "metadata": {},
    "source": [
     "# Funktionen\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeb874a0",
+   "id": "efa8aaaa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,10 +191,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2748bf2",
+   "id": "a6cc1e56",
    "metadata": {},
    "source": [
-    "Hier wurde eine Funktion `add` geschrieben, die zwei Variablen aufaddiert. Wie du siehst, benutz man beim Programmieren eigentlich immer englische Begriffe. Die beiden Variablen werden in der Funktion `a` und `b` genannt (so werden sie in der ersten Zeile genann, der quasi die Namen so definiert). Wie die Variablen heißen, mit der wir die Funktion aufrufen, ist egal. In der Funktion werden die beiden Werte addiert und dann wird das Ergebnis mit `return`zurückgegeben. \n",
+    "Hier wurde eine Funktion `add` geschrieben, die zwei Variablen aufaddiert und das Ergebnis zurückgibt. Wie du siehst, benutz man beim Programmieren eigentlich immer englische Begriffe. Die beiden Variablen werden in der Funktion `a` und `b` genannt (so werden sie in der ersten Zeile genann, der quasi die Namen so definiert). Wie die Variablen heißen, mit der wir die Funktion aufrufen, ist egal. In der Funktion werden die beiden Werte addiert und dann wird das Ergebnis mit `return`zurückgegeben. \n",
     "\n",
     "Bei Funktionen in Python ist wichtig, dass ab der Definition in der ersten Zeile alles eingerückt wird, bis die Funktionen endet. Das macht man entweder mit 4 Leerzeichen oder indem man einmal `Tab` drückt.\n",
     "\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9c9df0f",
+   "id": "b63b59ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ccc4e51",
+   "id": "4f7e4953",
    "metadata": {},
    "source": [
     "Alternativ (vergiss nicht, `var1` und `var2` sind nur Platzhalter):"
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6e1d438",
+   "id": "93f3616c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d45cc28",
+   "id": "e9af1866",
    "metadata": {},
    "source": [
     "Wie Dir jetzt vielleicht auffällt, kanntest du von Anfang an schon eine Funktion, nämlich `print`. Diese bietet uns Python selbst schon an. Diese gibt auch nichts zurück, sondern macht einfach nur etwas, indem sie die übergebenen Variablen ausgibt. \n",
@@ -247,29 +247,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2f287f7",
+   "id": "5d4357e2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d1b4a2dc",
+   "id": "5456be02",
    "metadata": {},
    "source": [
     "# If-Abfrage\n",
     "\n",
-    "In quasi jeder Programmiersprache gibt es sogenannt `if` Abfragen. Diese fragen ab, ob eine bestimmte Bedingung erfüllt ist und wenn ja, wird ein Code Block ausgeführt. Dafür gibt es auch den Boolschen Datentyp den wir weiter oben hatten. Wenn die Bedingung `True` also wahr ist, wird der Code Block ausgeführt. Der muss eingrückt sein, genau wie bei einer Funktion.\n",
+    "In quasi jeder Programmiersprache gibt es sogenannt `if` Abfragen. Diese fragen ab, ob eine bestimmte Bedingung erfüllt ist und wenn ja, wird ein Code Block ausgeführt. Dafür gibt es auch den Boolschen Datentyp, den wir weiter oben hatten. Wenn die Bedingung `True` also wahr ist, wird der Code Block ausgeführt. Der muss eingrückt sein, genau wie bei einer Funktion.\n",
     "\n",
-    "Guck Dir den folgenden Code mal an und versuche ihn zu verstehen. Wenn du ihn  ausführst, welche `print` Befehler wirst du sehen\n",
+    "Guck Dir den folgenden Code mal an und versuche ihn zu verstehen. Wenn du ihn  ausführst, welche `print` Befehle wirst du sehen?\n",
     "\n",
-    "Tipp: Das Gleichheitszeichen wird in Python ja für die Zuweisung von Variablen verwendet (z.B. `a = 5`). Will man für `if` Blöcke abfragen, ob zwei Dinge identisch sind, muss man deswegen zwei Gleichkeitszeichen verwenden `==`. Sonst denkt der Computer, du willst etwas zuweisen."
+    "Tipp: Das Gleichheitszeichen wird in Python ja für die Zuweisung von Variablen verwendet (z.B. `a = 5`). Will man für `if` Blöcke abfragen, ob zwei Dinge \"gleich\" sind, muss man deswegen zwei Gleichkeitszeichen verwenden `==`. Sonst denkt der Computer, Du willst etwas zuweisen."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf9aa957",
+   "id": "2278731a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "775550be",
+   "id": "0a7fc548",
    "metadata": {},
    "source": [
     "Man kann auch noch einen `else` Block (engl. für \"ansonsten\") hinzufügen. Dieser wird ausgeführt, wenn die Bedinung falsch war. Es wird also entweder der `if` Block oder der `else` Block ausgeführt - nie beides. "
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7a3e82a",
+   "id": "77d48ed0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc8a1a3a",
+   "id": "bec91895",
    "metadata": {},
    "source": [
     "Schreibe eine Funktion, der man eine (String) Variable übergibt. Wenn dieser String genau dein Name ist, soll eine Nachricht augegeben werden, die du frei festlegen darfst. Wird ein andere String übergeben, soll ausgegeben werden \"Das bin nicht Ich\". Rufe die Funktion anschließend auf. Vergiss nicht, der Code der Funktion muss eingrückt sein. Der Code der `If`-Schleife dann sogar noch eins weiter. "
@@ -325,22 +325,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de7f3eff",
+   "id": "dde16f21",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "fb27489d",
+   "id": "70487eca",
    "metadata": {},
    "source": [
-    "# Listen und For-Schleifen"
+    "# Listen"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3cdbb5fa",
+   "id": "92032587",
    "metadata": {},
    "source": [
     "In Python kann man Listen definieren, die mehrere Variablen beinhalten. Listen werden mit eckigen Klammern gekennzeichnet. "
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63cfb60a",
+   "id": "a51ccd6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "310a8a19",
+   "id": "651ab764",
    "metadata": {},
    "source": [
     "Listen können auch leer sein. Mit `append()` kann man Dinge hinzufügen. Anders als bislang, ruft man diese Funktion auf, indem man den Aufruf an den Listenamen anhängt:"
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c511df5",
+   "id": "376bbc0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,18 +392,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9474d5e",
+   "id": "2a0cf56a",
    "metadata": {},
    "source": [
     "Man kann auch gezielt auf die Position in einer Liste zugreifen und diese auch so verändern. Das macht man mit den eckigen Klammern. Die gewünschte Position ist dazwischen. \n",
     "\n",
-    "Informatiker fangen bei 0 an zu zählen. Deswegen ist das erste Listenelement an Position `0`. Das letzte Element einer Liste ist `n-1`. "
+    "Informatiker fangen bei `0` an zu zählen. Deswegen ist das erste Listenelement an Position `0`. Das letzte Element einer n-elementigen Liste ist `n-1`. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f87ed96",
+   "id": "9ee4c214",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fade46bf",
+   "id": "35af841c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,16 +428,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cf884ee",
+   "id": "1c147d8d",
    "metadata": {},
    "source": [
-    "`len()` ist eine Funktion, die uns ähnlich wie `print` von Python zur Verfügung gestellt wird. Diese gibt uns die Länge einer Liste zurück oder besser gesagt: wie viele Elemente in der Liste sind. "
+    "`len()` ist eine Funktion, die uns ähnlich wie `print` von Python zur Verfügung gestellt wird. Diese gibt uns die Länge einer Liste zurück oder besser gesagt: wie viele Elemente sind in der Liste. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdc3793f",
+   "id": "1b7710ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61f4d440",
+   "id": "7821aa49",
    "metadata": {},
    "source": [
     "Schreibe eine Funktion, die eine Liste entgegen nimmt und ausgibt \"Das ist eine lange Liste\", wenn diese mehr als 3 Elemente beinhaltet. Wenn sie weniger Elemente hat, dann gibt sie aus: \"Das ist eine kurze Liste\". Teste sie mit den beiden Listen, die wir schon definiert haben. Die Definitionszeile der Funktion haben wir schon für dich geschrieben. "
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca602dfe",
+   "id": "b0de8222",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,16 +473,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eb41ef9",
+   "id": "b9d880d4",
    "metadata": {},
    "source": [
-    "`For`-Schleifen sind neben `if`, Funktionen und Variablen ein weiteres Konstrukt, das man in fast jeder Programmiersprache findet. Mit ihnen kann man über Dinge iterieren - in unserem Fall also Listen. Eine Schleife führt dabei eine eigene Variable ein (die man auch wieder beliebig benennen kann). Diese Varaible nimmt dann jeden Wert einer Liste einmal an und mit diesem kann dann etwas machen. Man kann die Schleifendefinition lesen als: `Für jedes Element in der Liste, mache das folgende:`. Hier ein Beispiel."
+    "# For-Schleifen\n",
+    "\n",
+    "`For`-Schleifen sind neben `if`, Funktionen und Variablen ein weiteres Konzept, das man in fast jeder Programmiersprache findet. Mit ihnen kann man über Dinge iterieren - in unserem Fall also Listen. Eine Schleife führt dabei eine eigene Variable ein (die man auch wieder beliebig benennen kann). Diese Variable nimmt dann jeden Wert einer Liste einmal an und mit diesem kann dann etwas machen. Man kann die Schleifendefinition lesen als: `Für jedes Element in der Liste, mache das folgende:`. Hier ein Beispiel."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a8e87f2",
+   "id": "58d5ade9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,10 +497,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5df27afa",
+   "id": "e6aaa2c9",
    "metadata": {},
    "source": [
-    "Der Code, der für jedes Element ausgeführt werden soll, muss auch wieder eingerückt sein. Die Schleife lässt sich also übersetzen in: `Für jedes Element der Liste \"my_list\", das ich \"e\" nenne, mache das folgende: print(e)`.\n",
+    "Der Code, der für jedes Element ausgeführt werden soll, muss auch wieder eingerückt sein. Die Schleife lässt sich also übersetzen in: `Für jedes Element der Liste \"my_list\", das ich in dem Moment \"e\" nenne, mache das folgende: print(e)`.\n",
     "\n",
     "Man kann auch kompliziertere Dinge mit den Elementen machen als sie einfach auszugeben. Was aber so nicht funktioniert, ist die Liste zu verändern. Denn `number` ist ja einfach nur eine Variable, wie wir das aktuelle Listenelement nennen, aber nicht das Listenelement selbst. "
    ]
@@ -506,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3a9ee6c",
+   "id": "d2195e1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f663aef",
+   "id": "f9027892",
    "metadata": {},
    "source": [
     "Listen durch Schleifen zu verändern, geht aber schon. Da müssen wir aber anders drübergehen. Du hast ja weiter oben schon gelernt, dass man den Eintrag ändern kann, wenn man den Index kennt. Wenn wir also über eine Liste iterieren würden, die alle Indizes unserer Liste enthält, könnten wir so auch die Inhalte der Liste bearbeiten.\n",
@@ -529,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69ec8522",
+   "id": "58f09b0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,10 +541,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2c3af77",
+   "id": "0662d6c4",
    "metadata": {},
    "source": [
-    "Auch hier wird also von `0` angezählt. Aber das ist ja sehr praktisch, wenn wir so unsere Liste verändern wollen. \n",
+    "Auch hier wird also von `0` an gezählt. Aber das ist ja sehr praktisch, wenn wir so unsere Liste verändern wollen. \n",
     "\n",
     "Das folgende Stück Code macht vieles auf einmal, was du gerade gelernt hast. Guck mal, ob du vorhersagen kannst, was am Ende rauskommt. "
    ]
@@ -550,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a62a2089",
+   "id": "75f1ce40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,11 +566,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e938f62c",
+   "cell_type": "markdown",
+   "id": "2ac78140",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
