--- a/Python_Basics.ipynb
+++ b/Python_Basics.ipynb
@@ -220,7 +220,9 @@
    "id": "4f7e4953",
    "metadata": {},
    "source": [
-    "Alternativ (vergiss nicht, `var1` und `var2` sind nur Platzhalter):"
+    "Vergiss nicht, `var1` und `var2` sind nur Platzhalter. In der Funktion wird `var1` `a` genannt. `var2` wird zu `b`.\n",
+    "\n",
+    "Man die Funktion auch direkt mit Werten aufrufen, ohne Platzhalter:"
    ]
   },
   {
