--- a/Python_Basics.ipynb
+++ b/Python_Basics.ipynb
@@ -467,7 +467,7 @@
    "id": "7821aa49",
    "metadata": {},
    "source": [
-    "Schreibe eine Funktion, die eine Liste entgegen nimmt und ausgibt \"Das ist eine lange Liste\", wenn diese mehr als 3 Elemente beinhaltet. Wenn sie weniger Elemente hat, dann gibt sie aus: \"Das ist eine kurze Liste\". Teste sie mit den beiden Listen, die wir schon definiert haben. Die Definitionszeile der Funktion haben wir schon für dich geschrieben. "
+    "**Aufgabe:** Schreibe eine Funktion, die eine Liste entgegen nimmt und ausgibt \"Das ist eine lange Liste\", wenn diese mehr als 3 Elemente beinhaltet. Wenn sie weniger Elemente hat, dann gibt sie aus: \"Das ist eine kurze Liste\". Teste sie mit den beiden Listen, die wir schon definiert haben. Die Definitionszeile der Funktion haben wir schon für dich geschrieben. "
    ]
   },
   {
@@ -488,6 +488,22 @@
     "check_length(list1)\n",
     "check_length(list2)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d99ad63",
+   "metadata": {},
+   "source": [
+    "**Optional:** Erweitere deine Funktion, so, dass sie auch die Länge des ersten Worts in der Liste ausgibt. Also z.B.: \"Das ist eine lange Liste. Das erste Wort hat 10 Buchstaben.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24b43035",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -588,13 +604,45 @@
    "id": "2ac78140",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b8d67d4",
+   "metadata": {},
+   "source": [
+    "**Optional:** Erweitere die Funktion aus vorhergehender Aufgabe ('check_length'), so das sie die Anzahl an Buchstaben für jeden Eintrag der Liste überprüft und den Mittelwert der Länge aller Einträge ausgibt (anstatt nur die Länge des ersten Wortes)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "513694aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eea80559",
+   "metadata": {},
+   "source": [
+    "**Optional:** Abschließend erweitere diese Funktion, so, dass sie die Wörter in der Liste durch die Anzahl der jeweiligen Buchstaben ersetzt und zurückgibt. Deine Funktion bekommt dann also eine Liste von Buchstaben und gibt eine Liste von Zahlen zurück. Nutze hierfür die oben erklärte Technik zum Abändern von Listen und verwende keine neue Liste. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fa4c9dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "work",
+   "display_name": "Python 3.6.8 64-bit",
    "language": "python",
-   "name": "work"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -606,7 +654,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.6.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
